# EPVH

./: .gitignore  CMakeLists.txt  EPVH.kdev4  README.md  basevh.cpp  basevh.h  camerainfo.cpp  camerainfo.h  contourio.h  display3droutines.cpp  display3droutines.h  epvh.cpp  epvh.cpp.autosave  epvh.h  epvh_demo.cpp  generaltypes.h  math2d.cpp  math2d.h  math3d.cpp  math3d.h  segmentclipper.cpp  segmentclipper.h  silhouette.cpp  silhouette.h  sortingpredicates.cpp  sortingpredicates.h
.kdev4/: EPVH.kdev4
datasets/: alien-camera.txt  alien-contour.txt
externalinclues/: eigenincludes.h  opencvincludes.h  vtkincludes.h
